# iblog

./: .gitignore  CONFIGURATION_SYSTEM.md  LICENSE  README.md  TEST_RESULTS.md  config.default.yaml  main.py  pyproject.toml
assets/markdown_files/: about.md  markdown_intro.md  project_intro.md
docs/: PINNED_FEATURE.md  TOC_FEATURE.md
src/iblog/: __init__.py  __main__.py
src/iblog/cli/: __init__.py  build.py
src/iblog/core/: __init__.py  config_loader.py  config_models.py  file_scanner.py  metadata_parser.py  template_renderer.py  toc_generator.py
src/iblog/generators/: __init__.py  about_generator.py  base_generator.py  category_generator.py  index_generator.py  post_generator.py  tag_generator.py
templates/: _base.html  about.html  blog_post.html  categories.html  category_detail.html  index.html  tag_detail.html  tags.html
tests/: test_core.py  test_generators.py
